[package]
name = "expressi"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
build = "build.rs"

[dependencies]
cranelift = "0.18.1"
cranelift-module = "0.18.1"
cranelift-simplejit = "0.18.1"
clap = "2.32.0"
failure = "0.1.2"
ansi_term = "0.11.0"
scopeguard = "0.3.3"

[build-dependencies]
peg = "0.5"
