[package]
name = "expressi"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
build = "build.rs"
license = "MIT OR Apache-2.0"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
clap = "2.32.0"
failure = "0.1.2"
ansi_term = "0.11.0"
scopeguard = "0.3.3"
serde = "1.0"
serde_yaml = "0.8"

[build-dependencies]
peg = "0.5"
