[package]
name = "expressi"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
build = "build.rs"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
structopt = "0.2.15"
failure = "0.1.2"
ansi_term = "0.11.0"
rustyline = "3.0.0"
dirs = "1.0.5"
bytes = "0.4.12"
tempfile = "3"

[build-dependencies]
peg = "0.5"
